--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.19.4",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.25.0",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -32,7 +34,9 @@
     "regenerator-runtime": "^0.13.1",
     "stylelint": "^14.1.0",
     "stylelint-config-recommended": "^6.0.0",
-    "vite": "^3.2.10"
+    "vite": "^3.2.10",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": ">=16.x"
@@ -43,6 +47,9 @@
     "commit": "a942adeb868f1fe54b86e34cc4fc4ddb0601700d"
   },
   "dependencies": {
-    "firebase": "^10.5.2"
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "css-loader": "^7.1.2",
+    "firebase": "^10.5.2",
+    "style-loader": "^4.0.0"
   }
 }
