--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
     "css-loader": "^7.1.2",
     "firebase": "^10.5.2",
     "style-loader": "^4.0.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "author": ""
 }
